--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
     <script type="text/javascript">
       var map;
-      var data;
+
       document.addEventListener('DOMContentLoaded', function() {
         // see how what the example spreadsheet looks like:
         // https://docs.google.com/spreadsheet/lv?key=0Ao5u1U6KYND7dGN5QngweVJUWE16bTRob0d2a3dCbnc
@@ -135,7 +135,7 @@
         map._resetView([0.328, 32.578], 14)
 
         var tableOptions = {
-          "data": data,
+          "data": optionsJSON,
           "pagination": 10,
           "tableDiv": "#hotSpotsTable",
           "filterDiv": "#hotSpotsTableFilter"
