--- a/index.html
+++ b/index.html
@@ -77,14 +77,13 @@
       <div class="row">
         <p>To add a hostpot, access the Google Spreadsheet <a href="https://docs.google.com/spreadsheets/d/1sQaj4pt6Bn5Y6MoNin4NDs0WfJ200Fn4EFuccd0_Wvo/edit?usp=sharing" target="_blank">here</a>. Add the wifi hotspot details. Or copy, paste, edit. Smile, for a job well done, and refresh the page to look up your added hotspot. That's it.</p>
       </div>
+      <div class="row">
+        <input id="hotSpotsTableFilter" type="text" placeholder="filter by.."></input>
+        <div id="hotSpotsTable"></div>
+      </div>
     </div>
   </div>
-  <div class="section">
-    <div class="container">
-      <input id="hotSpotsTableFilter" type="text" placeholder="filter by.."></input>
-      <div id="hotSpotsTable"></div>
-    </div>
-  </div>
+
   <div class="section">
     <div class="container">
       <footer>
